--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: minima
-title: Tyrone's art store
+#title: Tyrone's art store
 author: tyrone
 email: tyrinfern@domain.com
 description: > # this means to ignore newlines until "baseurl:"
