--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
 theme: minima
-#title: Tyrone's art store
+title: Tyrone's art store
 author: tyrone
 email: tyrinfern@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Art store that makes a wallpaper consisting of 2 of my paintings for $2.
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  
+  
+ 
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
 github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
 
-show_excerpts: true # set to false to remove excerpts on the homepage
+show_excerpts: false # set to false to remove excerpts on the homepage
