--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # this means to ignore newlines until "baseurl:"
  
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+#twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
+github_username:  tyronetheartist # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: false # set to false to remove excerpts on the homepage
