--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ theme: minima
 #title: Tyrone's art store
 
 description: > # this means to ignore newlines until "baseurl:"
-  Art store that makes a wallpaper consisting of 2 of my paintings for $2.
-  
+  Art store that makes a wallpaper consisting of 2 of my paintings 
   
  
 
@@ -11,4 +10,4 @@ description: > # this means to ignore newlines until "baseurl:"
 #twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
 github_username:  tyronetheartist # DO NOT include the @ character, or else the build will fail!
 
-show_excerpts: false # set to false to remove excerpts on the homepage
+show_excerpts: true # set to false to remove excerpts on the homepage
